force-app/main/default/objects/ssot__RegulatoryCode__dlm/fields/ssot__EffectiveFromDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveFromDateTime__c</fullName>
    <label>Effective From Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveFromDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>