force-app/main/default/objects/ssot__RegulatoryCode__dlm/fields/ssot__EffectiveToDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveToDateTime__c</fullName>
    <label>Effective To Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveToDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>