force-app/main/default/objects/ssot__RegulatoryCode__dlm/fields/ssot__RegulatoryCodeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryCodeType__c</fullName>
    <label>Regulatory Code Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryCodeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>