force-app/main/default/objects/ssot__RegulatoryCode__dlm/fields/ssot__rel_1719819539655_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819539655_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryCode_RegulatoryAuthorityId_rel</label>
    <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
    <relationshipLabel>RegulatoryCode_RegulatoryAuthorityId_rel</relationshipLabel>
    <relationshipName>rel_1719819539655_end</relationshipName>
    <type>Lookup</type>
</CustomField>